chore: add Lefthook with pre-commit/pre-push hooks\n\n- pre-commit: prettier --write (staged) + eslint --fix (staged)\n- pre-push: npm run typecheck\n- scripts.prepare: lefthook install

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format:check": "prettier --check .",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext .ts,.js --max-warnings=0",
-    "lint:fix": "eslint . --ext .ts,.js --fix"
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "prepare": "lefthook install"
   },
   "keywords": [
     "obsidian",
@@ -29,7 +30,8 @@
     "eslint": "^8.57.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint-config-prettier": "^9.1.0"
+    "eslint-config-prettier": "^9.1.0",
+    "lefthook": "^1.6.10"
   },
   "repository": {
     "type": "git",
